@@ -1,3 +1,7 @@
+2005-04-28  Bruno Haible  <bruno@clisp.org>
+
+	* mop.tst: Add a test for update of specializers -> methods lists.
+
 2005-04-22  Sam Steingold  <sds@gnu.org>
 
 	* excepsit.tst: check that one cannot redefine EXT:!
