@@ -1,3 +1,10 @@
+2005-04-28  Bruno Haible  <bruno@clisp.org>
+
+	* clos-genfun2b.lisp (reinitialize-instance-<generic-function>): When
+	removing old defgeneric-originated methods, also call
+	remove-direct-method on the specializers.
+	Reported by Paul F. Dietz <dietz@dls.net>.
+
 2005-04-27  Sam Steingold  <sds@gnu.org>
 
 	* utils/modprep.lisp (string-rest): check POS
